fix: 8 bugs found and fixed; 2/3 stretch goals completed

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       </div>
       <div>
         <p class="message" id="number-of-guesses"></p>
-        <p class="message" id="too-high">You guessed too high. Try again.</p>
-        <p class="message" id="too-low">You guessed too low. Try again.</p>
+        <p class="message" id="too-high">You've guessed too high. Try again.</p>
+        <p class="message" id="too-low">You've guessed too low. Try again.</p>
         <p class="message" id="max-guesses">
-          You reached the max number of guesses
+          You've reached the max number of guesses
         </p>
         <p class="message" id="correct">
-          Congratulations, You guessed correctly! <br />
+          Congratulations, You've guessed correctly! <br />
           Would you like to play again?
         </p>
       </div>
